--- a/.gitattributes
+++ b/.gitattributes
@@ -3,11 +3,7 @@
 
 # Explicitly declare text files we want to always be normalized and converted 
 # to native line endings on checkout.
-*.c text
-*.h text
-
-# Declare files that will always have CRLF line endings on checkout.
-*.sln text eol=lf
+*.* text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
